<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="kr.co.nexters.winepick.ui.search.SearchFilterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            tools:context=".ui.search.SearchActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_search_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetStart="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_search_filter_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:paddingStart="24dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="12dp"
                    android:src="@drawable/btn_back" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_search_filter_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:lineSpacingExtra="0sp"
                    android:paddingTop="12dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="12dp"
                    android:text="@string/search_filter_title"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_search_filter_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@color/transparent"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingStart="12dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="12dp"
                    android:text="@string/search_filter_confirm"
                    android:textColor="#80000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_search_filter_taste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_search_filter_taste_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/search_filter_taste_title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/search_filter_taste_title" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_search_filter_taste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_search_filter_taste_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0sp"
                    android:paddingVertical="11dp"
                    android:text="@string/search_filter_taste_content"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/gl_search_filter_taste"
                    app:layout_constraintTop_toBottomOf="@+id/tv_search_filter_taste_title"
                    tools:text="@string/search_filter_taste_content" />

                <LinearLayout
                    android:id="@+id/layout_search_filter_taste_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_search_filter_taste_content"
                    app:layout_constraintLeft_toRightOf="@+id/gl_search_filter_taste"
                    app:layout_constraintRight_toRightOf="parent">

                    <com.google.android.material.slider.RangeSlider
                        android:id="@+id/sb_search_filter_taste_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stepSize="1.0"
                        android:valueFrom="4.0"
                        app:labelStyle="@style/SearchFilterToolTipTheme"
                        android:valueTo="13.0"
                        app:minSeparation="1dp"
                        app:thumbColor="@color/search_filter_tastes_content_track_active"
                        app:thumbRadius="5dp"
                        app:tickVisible="false"
                        app:trackColorActive="@color/search_filter_tastes_content_track_active"
                        app:trackColorInactive="@color/search_filter_tastes_content_track_inactive"
                        app:trackHeight="6dp"
                        app:values="@array/search_filter_taste_initial_contents" />

                    <!--                    <androidx.constraintlayout.widget.ConstraintLayout-->
                    <!--                        android:id="@+id/layout_search_filter_taste_content_texts"-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="16dp"-->
                    <!--                        android:paddingLeft="14dp"-->
                    <!--                        android:paddingRight="12dp" />-->
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_search_filter_taste_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0sp"
                    android:paddingVertical="11dp"
                    android:text="@string/search_filter_taste_type"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/gl_search_filter_taste"
                    app:layout_constraintTop_toBottomOf="@+id/tv_search_filter_taste_content"
                    tools:text="@string/search_filter_taste_type" />

                <LinearLayout
                    android:id="@+id/layout_search_filter_taste_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="36dp"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toRightOf="@+id/gl_search_filter_taste"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_search_filter_taste_type" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_search_filter_taste_taste"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0sp"
                    android:paddingVertical="11dp"
                    android:text="@string/search_filter_taste_taste"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/gl_search_filter_taste"
                    app:layout_constraintTop_toBottomOf="@+id/layout_search_filter_taste_type"
                    tools:text="@string/search_filter_taste_taste" />

                <LinearLayout
                    android:id="@+id/layout_search_filter_taste_taste"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="36dp"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toRightOf="@+id/gl_search_filter_taste"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_search_filter_taste_taste" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_search_filter_situation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_search_filter_situation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_search_filter_situation_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/search_filter_situation_title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/search_filter_situation_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_search_filter_situation_event"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0sp"
                    android:paddingVertical="11dp"
                    android:text="@string/search_filter_situation_event"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/gl_search_filter_situation"
                    app:layout_constraintTop_toBottomOf="@+id/tv_search_filter_situation_title"
                    tools:text="@string/search_filter_situation_event" />

                <LinearLayout
                    android:id="@+id/layout_search_filter_situation_event"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="36dp"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toRightOf="@+id/gl_search_filter_situation"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_search_filter_situation_event" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_search_filter_situation_food"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0sp"
                    android:paddingVertical="11dp"
                    android:text="@string/search_filter_situation_food"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/gl_search_filter_situation"
                    app:layout_constraintTop_toBottomOf="@+id/layout_search_filter_situation_event"
                    tools:text="@string/search_filter_situation_food" />

                <LinearLayout
                    android:id="@+id/layout_search_filter_situation_food"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="36dp"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toRightOf="@+id/gl_search_filter_situation"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_search_filter_situation_food" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_search_filter_where"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_search_filter_where"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/search_filter_where_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/search_filter_where_title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/search_filter_where_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_search_filter_where_convenience"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0sp"
                    android:paddingVertical="11dp"
                    android:text="@string/search_filter_where_convenience"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/gl_search_filter_where"
                    app:layout_constraintTop_toBottomOf="@+id/search_filter_where_title"
                    tools:text="@string/search_filter_where_convenience" />

                <LinearLayout
                    android:id="@+id/layout_search_filter_where_convenience"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="36dp"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toRightOf="@+id/gl_search_filter_where"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_search_filter_where_convenience" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_search_filter_confirm_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/bg_search_filter_confirm_bottom"
                android:includeFontPadding="false"
                android:text="@string/search_filter_confirm_bottom"
                android:textColor="@color/search_filter_confirm_bottom_text_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </ScrollView>
</layout>
